--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@ body {
     border: 1px solid #999;
     float: left;
     font-size: 24px;
-    font-weight: bold;
     line-height: 34px;
     height: 34px;
     margin-right: -1px;
@@ -30,6 +29,10 @@ body {
     padding: 0;
     text-align: center;
     width: 34px;
+  }
+
+  .square.bold {
+    font-weight: bold;
   }
   
   .square:focus {
